2016-03-01  Christophe Lyon <christophe.lyon@linaro.org>

	* config/aarch64-fv8.exp: Fix return code when using the
	Foundation Model which was silently failing to work.

2015-12-20  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Begin overhauling.
	* doc/ref.xml: Likewise.
	* doc/user.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2015-12-20  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Miscellaneous minor improvements.

2015-12-09  Yoshinori Sato  <ysato@users.sourceforge.jp>

	* Makefile.am (baseboard_DATA): Add missing rx-sim.exp.
	* Makefile.in: Regenerate.

2015-11-16  Brooks Moses  <bmoses@google.com>

	* config/unix.exp: Add ability to set test timeout from site.exp.
	* doc/user.xml: Document new test_timeout variable in site.exp.
	* doc/dejagnu.texi: Regenerate.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Re-enable --strace 1 test.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Remove some commented code.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Refer to "DejaGnu version", not "Framework
	version" in --version output.
	* testsuite/runtest.all/options.exp: Update test case.

2015-11-14  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Improve help text.

2015-11-12  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Sort options in usage.

2015-11-12  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (note): Remove old commented-out code.

2015-11-11  Ben Elliston  <bje@gnu.org>

	* doc/user.xml (Summary File): 'untested', not 'runtested'.
	* doc/dejagnu.texi: Regenerate.

2015-11-11  Michael Forney  <forney@google.com>

	* lib/target.exp (default_target_compile): Honor LDFLAGS_FOR_TARGET.

2015-11-11  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Regenerate.

2015-11-10  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Fix runtest output formatting in <programlisting>.

2015-11-10  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Update month and year.